# delivery-varnish

./: Dockerfile  README.md  default.vcl  start.sh
.circleci/: config.yml
.github/: runbooks.yml
helm/delivery-varnish/: Chart.yaml  delivery-varnish-auth-template.yaml  values.yaml
helm/delivery-varnish/app-configs/: delivery-varnish_delivery.yaml  delivery-varnish_delivery_k8sCT.yaml  delivery-varnish_delivery_prod_eu.yaml  delivery-varnish_delivery_prod_us.yaml  delivery-varnish_delivery_staging_eu.yaml  delivery-varnish_delivery_staging_us.yaml  delivery-varnish_eks_delivery_dev_eu.yaml  delivery-varnish_eks_delivery_prod_eu.yaml  delivery-varnish_eks_delivery_prod_us.yaml  delivery-varnish_eks_delivery_staging_eu.yaml  delivery-varnish_eks_delivery_staging_us.yaml  delivery-varnish_eks_delivery_test_eu.yaml
helm/delivery-varnish/templates/: delivery-varnish-sealed-secrets.yaml  deployment.yaml  elb-registrator-job.yaml  elb-registrator-route53-job.yaml  service.yaml
runbooks/: runbook.md
vmod-basicauth-1.9/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
vmod-basicauth-1.9/acvmod/: testsuite.inc  top.am  varnishapi.m4
vmod-basicauth-1.9/src/: Makefile.am  Makefile.in  basicauth.h  md5.c  sha1.h  vmod-basicauth.3  vmod_basicauth.3  vmod_basicauth.c  vmod_basicauth.vcc
vmod-basicauth-1.9/tests/: Makefile.am  Makefile.in  aprmd5.at  atlocal.in  crypt.at  htpasswd  package.m4  plain.at  sha1.at  testsuite  testsuite.at
